--- a/MyBroker/auth/views/admin/tableProfiles.ejs
+++ b/MyBroker/auth/views/admin/tableProfiles.ejs
@@ -3,6 +3,9 @@
             <tr>
               <th>Name</th>
               <th>Type</th>
+              <th class="orangeth">Edit</th>
+              <th class="orangeth">Delete</th>
+              <th class="orangeth">Rebalance</th>
             </tr>
           </tbody>
        </table>
