--- a/MyBroker/auth/views/stylesheets/adminstyle.ejs
+++ b/MyBroker/auth/views/stylesheets/adminstyle.ejs
@@ -79,11 +79,17 @@
         background-color: #4CAF50;
 			  color: white;
 			}
+			
+	  .orangeth {
+  			height: 50px;
+        background-color: orange;
+			  color: white;
+			}
       td { height: 25px;
            text-transform: uppercase;
          }
       
-      #editProfile {
+      #editProfile,#deleteProfile,#rebalanceProfile {
           background-color:black;
           border-color:black;
       }
