Treat CASH as a ticker

--- a/MyBroker/auth/views/admin/adminconsole.ejs
+++ b/MyBroker/auth/views/admin/adminconsole.ejs
@@ -108,12 +108,12 @@ $( function(){
       }
 
 <% include saveprofile %>
-<% include listprofiles %>
 <% include tickerfeed %>
 
 
 <% include functionsCRUDProfile %>      
-<% include functionsUtil %>  
+<% include functionsUtil %> 
+<% include initialize %> 
 
     </script>
   </body>
