--- a/MyBroker/auth/views/stylesheets/adminstyle.ejs
+++ b/MyBroker/auth/views/stylesheets/adminstyle.ejs
@@ -38,12 +38,14 @@
    - ... */
 	  .profileList { grid-area: main; 
                		 background-color: black; 
+    			     text-transform: uppercase;
                		 color: yellow; 
                		 text-align: center; 
                		 margin: 0;
       			   }
       .newProfile { grid-area: main; 
                		background-color: grey;
+          			text-transform: uppercase;
                		color: yellow; 
                		text-align: center; 
                		margin: 0;
@@ -51,6 +53,7 @@
       			  }
       .newTicker { grid-area: main;
                	   background-color: lightblue;
+       			   text-transform: uppercase;
                	   color: black; 
                	   text-align: center; 
                	   margin: 0;
@@ -76,15 +79,20 @@
 
       th {
   			height: 50px;
-        background-color: #4CAF50;
-			  color: white;
-			}
+            background-color: #4CAF50;
+			color: white;
+		 }
 			
 	  .orangeth {
   			height: 50px;
-        background-color: orange;
-			  color: white;
-			}
+  			text-transform: uppercase;
+            background-color: orange;
+			color: white;
+		}
+		
+	  .uppercase {
+  			text-transform: uppercase;
+		}
       td { height: 25px;
            text-transform: uppercase;
          }
