--- a/MyBroker/auth/views/admin/functionsCRUDProfile.ejs
+++ b/MyBroker/auth/views/admin/functionsCRUDProfile.ejs
@@ -115,10 +115,19 @@
 // Once the profile is returned, display it in the profile edit div which is brought in the foreground:
       function deleteProfileTable(response, status, xhr)
         { 
-           if (status == 'success') 
+           try {
+             if (status == 'success') 
               { console.log(response);
+                if ( response.includes('PROFILE TARGETS ARE RESET TO 0') ) {
+                console.log("Throw :"+response);
+                throw response;
+                }              
                 listProfiles();
                 location.reload();
               }
-           else throw "status";
-        }
+             else throw "status";
+           }
+           catch(e) {
+             alert(e);
+           }   
+        }  
