--- a/MyBroker/auth/views/admin/tickerfeed.ejs
+++ b/MyBroker/auth/views/admin/tickerfeed.ejs
@@ -4,18 +4,20 @@
       tickerFeed.onmessage=function(m) {
            var list = JSON.parse(m.data);
            $('#profileTickers tr, #updateProfileTickers tr').each(function() 
-           		{
+            {
            		var currentRow=$(this);
            		var ticker=currentRow.find(".tickerSymbol").text();
+// Skip CASH - not a ticker...
+           		if ( ticker != 'CASH' ) {
 // If ticker is not found in feed from server, 
 // need to fetch it by hand from the util API and then update table:
-           		if (typeof list[ticker] === "undefined" && ticker !== "") {
-    				console.log(ticker +" is new - requesting the stock price");
-    				$.when( $.ajax({ url: `utils/stock/${ticker}` }) )
-                     .then(function(response, status, xhr){currentRow.find(".stockPrice").html(response)});
+           		  if (typeof list[ticker] === "undefined" && ticker !== "") {
+    				  console.log(ticker +" is new - requesting the stock price");
+    				  $.when( $.ajax({ url: `utils/stock/${ticker}` }) )
+                       .then(function(response, status, xhr){currentRow.find(".stockPrice").html(response)});
     				
-                }
-                else currentRow.find(".stockPrice").html(list[ticker]);
-               
- 				});
+                  }
+                  else currentRow.find(".stockPrice").html(list[ticker]);
+                } 
+ 		     });
       };
