--- a/MyBroker/auth/views/admin/functionsCRUDProfile.ejs
+++ b/MyBroker/auth/views/admin/functionsCRUDProfile.ejs
@@ -131,3 +131,35 @@
              alert(e);
            }   
         }  
+        
+        
+//  ********************************************************************
+//  ************************ Rebalance Profile ****************************
+//  ********************************************************************           
+//  Function handling the button to rebalance a profile (from the profile list).
+//  Invokes POST /admin/rebalance with the profilename.
+//  
+//
+//
+
+    function rebalanceProfile(profilename) {
+      if (confirm("You are about to rebalance profile "+profilename+". Press OK to confirm deletion, or Cancel")) {
+
+        try {
+             var postdata = {profile:profilename};
+             console.log(postdata);
+             $.when( $.ajax({ method: 'POST', url: `admin/rebalance`, data: postdata , datatype: 'json' }) )
+              .then(rebalanceProfileDone);
+        }
+        catch(e) {
+          alert(e);
+        }   
+        
+      }     
+     }
+// Once the profile is returned, display it in the profile edit div which is brought in the foreground:
+      function rebalanceProfileDone(response, status, xhr)
+        { 
+          if (status == 'success') 
+              {console.log(response);}
+        }  
