--- a/MyBroker/auth/views/admin/functionsUtil.ejs
+++ b/MyBroker/auth/views/admin/functionsUtil.ejs
@@ -1,3 +1,9 @@
+ /* This function adds the first row of the table - the CASH row.
+    t:  the id of the table
+    id: the id to set on the cell which will contain
+        the % of cash in the profile (intially 100)
+    tclass: the class to set on the cell which will contain the cash %
+*/
       function addCashRow(t,id,tclass){
         var table = document.getElementById(t);
         var row = table.insertRow();
@@ -51,6 +57,8 @@
             symbol=row.insertCell();
             symbol.setAttribute('contenteditable','true');
             symbol.setAttribute('class','tickerSymbol');
+ // When clicking on the stock symbol cell, clean up the live update price cell (end of row)
+ // (to prepare for the eventual new symbol..            
             symbol.setAttribute('onfocus',`cleanupStockPrice(\"loadTable_price_${row.rowIndex}\")`);
             symbol.innerHTML=tickerlist[i].symbol;
             var exchange=row.insertCell();
@@ -60,6 +68,7 @@
             target.setAttribute('contenteditable','true');
             target.innerHTML=tickerlist[i].target;
             target.setAttribute('class','updateTargetClass');
+// after adding a new ticker, when quitting its target cell, recalculate the cash target and update it
             target.setAttribute('onblur','recalculate("updateTargetCash","updateTargetClass")');
             var stockPrice=row.insertCell();
             stockPrice.setAttribute('class','stockPrice'); /* stockPrice class used locate where to put the ticker value */
@@ -68,7 +77,13 @@
         } 
         recalculate('updateTargetCash','updateTargetClass');     
       }
-      
+
+/* tc:     the Cash target cell id (to update)
+   tclass: the class shared by all the stocks target cells.
+All the stocks target cells have the same tclass (cash target cells
+which was want to calculate has their own class) - that's what makes 
+it easy to select them with getElementsByClassName:
+*/
       function recalculate(tc,tclass) {
         console.log('recalculate....')
            var targets = document.getElementsByClassName(tclass);
